Fixed navbar to have no gap

--- a/style.css
+++ b/style.css
@@ -189,7 +189,6 @@ body{
   background-color: rgba(0,0,0,1);
   overflow: hidden
   height: 4vh;
-  position: sticky;
 }
 .topnavbar a{
   float: centre
@@ -209,4 +208,8 @@ body{
 }
 .topnavbar li{
   display: inline;
+}
+.topnavbar ul{
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
